--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header no-border no-padding no-margin>
   <ion-toolbar color="primary"  no-padding no-margin>
     <ion-buttons slot="start" class="logo left-side-element"  no-padding no-margin> </ion-buttons>
-    <ion-title text-left >
+    <ion-title text-left class="header-bar">
       <h4 class="title">READVICE</h4>
     </ion-title>
   </ion-toolbar>
@@ -23,7 +23,7 @@
             <div class="tool-table">
                 <div class="tool-row">
                     <div class="tool">
-                        filtra per: <input type="text"><input type="text"><input type="submit"><a href="#" style="text-align: right" class="button">cliente</a>
+                        filtra per: <input type="text"><input type="text"><a href="#" class="button submit">&nbsp;</a><a href="#" style="float: right" class="button">cliente</a>
 
                     </div>    
                 </div>
@@ -65,60 +65,40 @@
         </div>
     </div>
     <div class="right-area">
-        <div class="header">area</div>
+        <div class="header">
+            <div class="row">
+                <div class="header-cell">
+                    <span class="small">immobili di</span>
+                    <span class="nome">Paolo Rossi</span>
+                </div>
+            </div>
+        </div>
         <div class="list">
-            <ul>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
-                <li><div>sdfsdfsdfsdfsd</div></li>
+            <ul class="lista-immobile">
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell casa">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
-        <div class="footer"></div>
+        <div class="footer table">
+            <div class="row">
+                <div class="cell">
+                    <a hef="#" class="button">immobile</a>
+                </div>
+            </div>
+        </div>
     </div>
 </ion-content>
