--- a/src/global.scss
+++ b/src/global.scss
@@ -29,7 +29,7 @@
 
 /* Custom variables */
 
-$default-size: 90px;
+$default-size: 80px;
 $default-right-area-width: 260px;
 $default-content-area-left-margin: 30px;
 $default-content-area-right-margin: 60px;
@@ -39,6 +39,16 @@ $label-color: #707070;
 
 /* Custom style */
 
+.table {
+    display: table
+}
+.row {
+    display: table-row;
+}
+.cell {
+    display: table-cell;
+    vertical-align: middle;
+}
 ul {
     list-style: none;
     margin: 0;
@@ -54,15 +64,39 @@ ul {
     }
 }
 
+.button {
+    background: $highlight-text-color;
+    color: #fff;
+    border-radius: 25px;
+    padding: 5px 16px 6px 30px;
+    display: inline-block;
+    font-size: .7em;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration:  none;
+    position: relative;
+    top: -2px;
+    &.submit {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+    }
+}
 .title {
     margin-left: 20px;
 }
 
 .logo {
-    width: $default-size;
+    width: 88px;
     height: $default-size;
-    background: #EB6A5A;
+    //background: #EB6A5A;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('/assets/img/logo@2x.png') ;
+    background-size: cover;
     text-align: center;
+}
+.header-bar {
+    background: #EDF4F8;
 }
 
 .left-menu {
@@ -97,7 +131,7 @@ ul {
         position: absolute;
         left: $default-content-area-left-margin;
         right: $default-content-area-right-margin;
-        height: 10%;
+        height: 80px;
         .tool-table {
             height: 100%;
             display: table;
@@ -114,7 +148,7 @@ ul {
     }
     .content {
         position: absolute; 
-        top: 10%;
+        top: 80px;
         bottom: 0;
         width: 100%;
         .header {
@@ -163,7 +197,18 @@ ul {
                         border-radius:  10px 0 0 10px ;
                     }
                     &.immobili {
-                        width: 13%;
+                        width: 15%;
+                        background-image: url('/assets/img/home-icon@2x.png') ;
+                        background-repeat: no-repeat;
+                        background-position: 15px center;
+                        text-align: right;
+                        .badge {
+                            background: $highlight-text-color;
+                            color: #fff;
+                            border-radius: 9px;
+                            display: inline-block;
+                            padding: 3px 8px;
+                        }
                     }
                     &.bv {
                         width: 25%;
@@ -243,11 +288,7 @@ ul {
                 position: relative;
                 margin-bottom: 20px;
                 width: 100%;
-                //height: 30px;
                 padding-left: 15px;
-                /*&.status-red {
-                    background: #f00;
-                }*/
                 .cliente-table {
                     z-index: 10;
                     display: table;
@@ -276,7 +317,19 @@ ul {
                         border-radius:  10px 0 0 10px ;
                     }
                     &.immobili {
-                        width: 13%;
+                        width: 15%;
+                        background-image: url('/assets/img/home-icon@2x.png') ;
+                        background-repeat: no-repeat;
+                        background-position: 15px center;
+                        background-size: 22px auto;
+                        text-align: right;
+                        .badge {
+                            background: $highlight-text-color;
+                            color: #fff;
+                            border-radius: 9px;
+                            display: inline-block;
+                            padding: 3px 8px;
+                        }
                     }
                     &.bv {
                         width: 25%;
@@ -354,18 +407,79 @@ ul {
     bottom: 0;
     right: 0;
     width: $default-right-area-width;
-    background: #ff0;
     .header {
+        background: #fff;
         width: 100%;
-        height: 100px;
+        height: 80px;
+        display: table;
+        border-top-left-radius: 50px;
+        border: solid 1px #ccc;
+    }
+    .header-cell {
+        display: table-cell;
+        vertical-align: middle;
+        padding: 0 20px 0 30px;
+        span {
+            display: block;
+            &.small {
+                font-size: .7em;
+                color: $label-color;
+            }
+            &.nome {
+                color: $highlight-text-color;
+            }
+        }
     }
     .list {
         background-color:#fff;
         overflow: auto;
         position: absolute;
-        top: 100px;
-        bottom: 100px;
+        top: 80px;
+        bottom: 60px;
         width: 100%;
+        border-left: solid 1px #ccc;
+    }
+    .immobile {
+        padding: 20px 0 0 30px;
+        border-bottom: solid 1px #ccc;
+        position: relative;
+        height: 90px;
+        .indirizzo {
+            font-size: .8em;
+
+        }
+        .tipologia, .quota {
+            position: absolute;
+            height: 45px;
+            width: 60px;
+            text-align:center;
+            border-left: solid 1px #ccc;
+            right: 0;
+        }
+        .tipologia {
+            border-bottom: solid 1px #ccc;
+            top: 0;
+            
+            .casa {
+                background-repeat: no-repeat;
+                background-position: center;
+                background-image: url('/assets/img/casa@2x.png') ;
+            }
+        }
+        .quota {
+            bottom: 0;
+        }
+    }
+    .footer {
+        background-color:#fff;
+        overflow: auto;
+        position: absolute;
+        bottom: 0;
+        height: 60px;
+        width: 100%;
+        border-left: solid 1px #ccc;
+        border-top: solid 1px #ccc;
+        text-align: center;
     }
 }
 
