--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,8 +2,12 @@
   <ion-toolbar color="primary"  no-padding no-margin>
     <ion-buttons slot="start" class="logo left-side-element"  no-padding no-margin> </ion-buttons>
     <ion-title text-left class="header-bar">
-      <h4 class="title">READVICE</h4>
+      <img src="/assets/img/readvice-logo@2x.png" class="title">
     </ion-title>
+    <ion-buttons slot="end" class="tools">
+        <a href="#" class="hints tasks"><span>10</span></a>
+        <a href="#" class="hints alerts"><span>10</span></a>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
