--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header no-border no-padding no-margin>
-  <ion-toolbar color="primary"  no-padding no-margin>
+  <ion-toolbar color="bar"  no-padding no-margin>
     <ion-buttons slot="start" class="logo left-side-element"  no-padding no-margin> </ion-buttons>
     <ion-title text-left class="header-bar">
       <img src="/assets/img/readvice-logo@2x.png" class="title">
@@ -46,12 +46,13 @@
                                 <div class="item immobili"><span class="badge">4</span></div>
                                 <div class="item bv"><span class="bv_label">Book Value (&euro;)</span><span class="bv_value">450K</span><a href="#" class="button view only-icon">&nbsp;</a></div>
                                 <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span><span class="email">paolo.rossi@domain.it</span></div>
-                                <div class="item tools"><a href="#" class="button edit">Modifica</a><br><a href="#" class="button report">Report</a></div>
+                                <div class="item tools"><a href="#" class="button edit">Modifica</a><a href="#" class="button report">Report</a></div>
                             </div>
                         </div>
                         <div class="status red"></div>
                     </div>
                 </div>
+                <div class="list-title">clienti (20):</div>
             </div>
             <div class="list">
                 <ul class="lista-cliente">
@@ -102,8 +103,8 @@
                     <li class="cliente">
                         <div class="cliente-table">
                             <div class="cliente-row">
-                                <div class="item immobili"><span class="badge">4</span></div>
-                                <div class="item bv"><span class="bv_value">450K</span><span class="bv_label">Book Value (&euro;)</span></div>
+                                <div class="item immobili"><span class="badge">?</span></div>
+                                <div class="item bv"><span class="bv_value request-pending">Richiesta inviata</span></div>
                                 <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span></div>
                                 <div class="item date"><span class="date">20/06/2019</span></div>
                             </div>
