--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header no-border no-padding no-margin>
-  <ion-toolbar color="bar"  no-padding no-margin>
+  <ion-toolbar color="bar" no-padding no-margin>
     <ion-buttons slot="start" class="logo left-side-element"  no-padding no-margin> </ion-buttons>
     <ion-title text-left class="header-bar">
       <img src="/assets/img/readvice-logo@2x.png" class="title">
@@ -13,16 +13,6 @@
 </ion-header>
 
 <ion-content class="body">
-    <div class="left-menu left-side-element">
-        <div class="base">
-            <ul>
-                <li><div routerLink="/dashboard" routerDirection="root">sd</div></li>
-                <li><div>sd</div></li>
-                <li><div>sd</div></li>
-                <li><div>sd</div></li>
-            </ul>
-        </div>
-    </div>
     <div class="content-area">
         <div class="tool-area">
             <div class="tool-table">
@@ -46,7 +36,7 @@
                                 <div class="item immobili"><span class="badge">4</span></div>
                                 <div class="item bv"><span class="bv_label">Book Value (&euro;)</span><span class="bv_value">450K</span><a href="#" class="button view only-icon">&nbsp;</a></div>
                                 <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span><span class="email">paolo.rossi@domain.it</span></div>
-                                <div class="item tools"><a href="#" class="button edit">Modifica</a><a href="#" class="button report">Report</a></div>
+                                <div class="item tools"><a href="#" class="button edit full-width">Modifica</a><a href="#" class="button report full-width">Report</a></div>
                             </div>
                         </div>
                         <div class="status red"></div>
