--- a/src/app/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/scheda-immobile/scheda-immobile.page.html
@@ -1,9 +1,233 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>scheda immobile</ion-title>
-  </ion-toolbar>
+<ion-header no-border no-padding no-margin>
+    <ion-toolbar color="bar" no-padding no-margin>
+        <ion-buttons slot="start" class="logo left-side-element" no-padding no-margin> </ion-buttons>
+        <ion-title text-left class="header-bar">
+            <img src="/assets/img/readvice-logo@2x.png" class="title">
+        </ion-title>
+        <ion-buttons slot="end" class="tools">
+            <a href="#" class="hints tasks"><span>10</span></a>
+            <a href="#" class="hints alerts"><span>10</span></a>
+            <a href="#" class="user">alessandro.tamborini@readvice.it</a>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content class="body">
+    <div class="content-area">
+        <div class="tool-area">
+            <div class="tool-table">
+                <div class="tool-row">
+                    <div class="tool">
+                        <a href="#" class="button back only-icon">&nbsp;</a> <h3 class="page-title cliente">Francesca Palmi - Immobile</h3>
+                        <div style="float: right"><a href="#" class="button view">Catastali</a><a href="#" class="button edit">Modifica</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <div class="scheda-immobile">
+                <div class="immobile-header">
+                    <div class="immobile-table">
+                        <div class="immobile-row">
+                            <div class="item tipologia abitazione"></div>
+                            <div class="item anagrafica">piazza privata Guide Maquiguas, Cervinia</div>
+                            <div class="item date"><span>Novembre</span><span>20</span><span>2019</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="immobile-content">
+                    <div class="immobile-table">
+                        <div class="immobile-row">
+                            <div class="item">
+                                <div class="item-title">Abitazioni <a href="#" class="button view only-icon">&nbsp;</a></div>
+                                <ul class="item-list">
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                </ul>
+                            </div>
+                            <div class="item">
+                                <h3 class="item-title">Abitazioni <span>500K</span></h3>
+                                <ul class="item-list">
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="immobile-row">
+                            <div class="item">
+                                <h3 class="item-title">Abitazioni <span>500K</span></h3>
+                                <ul class="item-list">
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                </ul>
+                            </div>
+                            <div class="item">
+                                <h3 class="item-title">Abitazioni <span>500K</span></h3>
+                                <ul class="item-list">
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="right-area">
+        <div class="header">
+            <div class="row">
+                <div class="header-cell">
+                    <span class="small">immobili di</span>
+                    <span class="nome">Paolo Rossi</span>
+                </div>
+            </div>
+        </div>
+        <div class="list">
+            <ul class="lista-immobile">
+                <li class="immobile selected">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell abitazione">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell commerciale">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell parcheggio">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell magazzino">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell abitazione">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell commerciale">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell parcheggio">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell magazzino">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="footer table">
+            <div class="row">
+                <div class="cell">
+                    <a hef="#" class="button add">immobile</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </ion-content>
